# DS2_Project

./: .gitignore  CMakeLists.txt  trafficApp
backend/src/: testing.cpp
backend/src/datastructures/: Graph.cpp  Graph.hpp  IntervalTree.cpp  IntervalTree.hpp  TrafficData.cpp  TrafficData.hpp  main.cpp
backend/src/tests/: IntervalTree_test.cpp
frontend/: index.html
